k8s/auth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  ports:
  - name: backend
    targetPort: 9999
    port: 80
  selector:
    app: auth
